[gd_scene load_steps=4 format=3 uid="uid://bufvm71fwuds1"]

[ext_resource type="PackedScene" uid="uid://0r2bw4tditc7" path="res://Scenes/tile.tscn" id="2_7voly"]
[ext_resource type="Script" path="res://Scripts/GameManager.gd" id="2_c1kvb"]
[ext_resource type="PackedScene" uid="uid://cj6x33qik6e8s" path="res://Scenes/window.tscn" id="3_62ela"]

[node name="Game" type="Node2D"]

[node name="GameManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_c1kvb")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(5, 5)

[node name="Tile" parent="." instance=ExtResource("2_7voly")]
unique_name_in_owner = true
position = Vector2(-33, -33)

[node name="Tile2" parent="." instance=ExtResource("2_7voly")]
unique_name_in_owner = true
position = Vector2(0, -33)

[node name="Tile3" parent="." instance=ExtResource("2_7voly")]
unique_name_in_owner = true
position = Vector2(33, -33)

[node name="Tile4" parent="." instance=ExtResource("2_7voly")]
unique_name_in_owner = true
position = Vector2(-33, 0)

[node name="Tile5" parent="." instance=ExtResource("2_7voly")]
unique_name_in_owner = true

[node name="Tile6" parent="." instance=ExtResource("2_7voly")]
unique_name_in_owner = true
position = Vector2(33, 0)

[node name="Tile7" parent="." instance=ExtResource("2_7voly")]
unique_name_in_owner = true
position = Vector2(-33, 33)

[node name="Tile8" parent="." instance=ExtResource("2_7voly")]
unique_name_in_owner = true
position = Vector2(0, 33)

[node name="Tile9" parent="." instance=ExtResource("2_7voly")]
unique_name_in_owner = true
position = Vector2(33, 33)

[node name="Window" parent="." instance=ExtResource("3_62ela")]
unique_name_in_owner = true
size = Vector2i(300, 300)
visible = false
